...
                MuscleGroup(id = 6, name = "Abs", imageName = "abs")
            )
            // Insert muscle groups
            database.muscleGroupDao().insertAllMuscleGroups(muscleGroupList)

            val exercises = listOf(
                Exercise(id = 1, name = "Bench Press", typeId = 1),  // Chest
                Exercise(id = 2, name = "Dumbbell Incline Bench Press", typeId = 1),  // Chest
                Exercise(id = 3, name = "Machine Chest Fly", typeId = 1),  // Chest
                Exercise(id = 4, name = "Push Up", typeId = 1),  // Chest
                Exercise(id = 5, name = "Cable Crossovers", typeId = 1),  // Chest
                Exercise(id = 6, name = "Pull-Up", typeId = 2),  // Back
                Exercise(id = 7, name = "Dead-lift", typeId = 2),  // Back
                Exercise(id = 8, name = "Dumbbell Row", typeId = 2),  // Back
                Exercise(id = 9, name = "Lat Pull-down", typeId = 2),  // Back
                Exercise(id = 10, name = "Shrugs", typeId = 2),  // Back
...
