...
                    ),
                    shape = MaterialTheme.shapes.small,
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(dimensionResource(id = R.dimen.padding_small))
                ) {
                    Text(text = "Add Exercise")
                }
            BottomNavigation(
                navController = navController,
            )
            }
        }
...
